<resources>
    <string name="app_name">MyMessenger</string>
    <string name="todo">TODO</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="loguot">Loguot</string>
    <string name="logout">logout</string>
    <string name="name">Name</string>
    <string name="write_message">Write message</string>
    <string name="don_t_have_an_account_sign_up">DON\'T HAVE AN ACCOUNT?? SIGN UP</string>
</resources>
